# EECS498

./: .gitignore  main.py  pyproject.toml
A1/: knn.ipynb  knn.py  pytorch101.ipynb  pytorch101.py
A2/: linear_classifier.ipynb  linear_classifier.py  softmax_best_model.pt  svm_best_model.pt  two_layer_net.ipynb  two_layer_net.py
A3/: best_overfit_five_layer_net.pth  convolutional_networks.ipynb  convolutional_networks.py  fully_connected_networks.ipynb  fully_connected_networks.py  one_minute_deepconvnet.pth  overfit_deepconvnet.pth
