[project]
name = "eecs498"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.1.6",
    "matplotlib>=3.10.8",
    "notebook>=7.1.3",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "wget>=3.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
